--- a/MDK-ARM/testPin-C011F6/testPin-C011F6.build_log.htm
+++ b/MDK-ARM/testPin-C011F6/testPin-C011F6.build_log.htm
@@ -27,31 +27,32 @@ Project File Date:  07/09/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'testPin-C011F6'
-assembling startup_stm32c011xx.s...
-compiling main.c...
-compiling stm32c0xx_hal_dma_ex.c...
-compiling stm32c0xx_hal_adc_ex.c...
-compiling stm32c0xx_hal_msp.c...
 compiling stm32c0xx_it.c...
+compiling main.c...
+compiling stm32c0xx_hal_msp.c...
+compiling stm32c0xx_hal_dma_ex.c...
+assembling startup_stm32c011xx.s...
 compiling stm32c0xx_hal.c...
 compiling stm32c0xx_hal_rcc_ex.c...
-compiling stm32c0xx_hal_flash_ex.c...
-compiling stm32c0xx_hal_rcc.c...
 compiling stm32c0xx_hal_flash.c...
+compiling stm32c0xx_hal_adc_ex.c...
+compiling stm32c0xx_hal_rcc.c...
 compiling stm32c0xx_hal_dma.c...
+compiling stm32c0xx_hal_flash_ex.c...
 compiling stm32c0xx_hal_pwr.c...
-compiling stm32c0xx_hal_gpio.c...
 compiling stm32c0xx_hal_adc.c...
-compiling stm32c0xx_hal_cortex.c...
 compiling stm32c0xx_hal_pwr_ex.c...
-compiling stm32c0xx_hal_i2c_ex.c...
+compiling stm32c0xx_hal_gpio.c...
+compiling stm32c0xx_hal_cortex.c...
 compiling stm32c0xx_hal_exti.c...
+compiling stm32c0xx_hal_i2c_ex.c...
 compiling system_stm32c0xx.c...
+compiling uart_trace.c...
 compiling stm32c0xx_hal_uart_ex.c...
 compiling stm32c0xx_hal_uart.c...
 compiling stm32c0xx_hal_i2c.c...
 linking...
-Program Size: Code=9556 RO-data=360 RW-data=12 ZI-data=2124  
+Program Size: Code=17988 RO-data=912 RW-data=12 ZI-data=2388  
 FromELF: creating hex file...
 "testPin-C011F6\testPin-C011F6.axf" - 0 Error(s), 0 Warning(s).
 
@@ -77,7 +78,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
