--- a/MDK-ARM/testPin-C011F6/testPin-C011F6.build_log.htm
+++ b/MDK-ARM/testPin-C011F6/testPin-C011F6.build_log.htm
@@ -22,39 +22,53 @@ Dialog DLL:      TARMCM1.DLL V1.14.6.0
  
 <h2>Project:</h2>
 C:\Users\diaferia\STM32CubeIDE\workspace_1.13.2\testPin-C011F6\MDK-ARM\testPin-C011F6.uvprojx
-Project File Date:  07/09/2024
+Project File Date:  07/11/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'testPin-C011F6'
-compiling stm32c0xx_hal_msp.c...
 assembling startup_stm32c011xx.s...
 compiling main.c...
+compiling stm32c0xx_hal_msp.c...
 compiling stm32c0xx_hal.c...
-compiling stm32c0xx_it.c...
-compiling stm32c0xx_hal_dma_ex.c...
 compiling stm32c0xx_hal_adc_ex.c...
-compiling stm32c0xx_hal_rcc.c...
+compiling stm32c0xx_hal_dma_ex.c...
+compiling stm32c0xx_it.c...
 compiling stm32c0xx_hal_rcc_ex.c...
+compiling stm32c0xx_hal_dma.c...
+compiling stm32c0xx_hal_rcc.c...
 compiling stm32c0xx_hal_flash.c...
 compiling stm32c0xx_hal_flash_ex.c...
-compiling stm32c0xx_hal_dma.c...
-compiling stm32c0xx_hal_gpio.c...
 compiling stm32c0xx_hal_pwr.c...
+compiling stm32c0xx_hal_gpio.c...
 compiling stm32c0xx_hal_pwr_ex.c...
 compiling stm32c0xx_hal_cortex.c...
-compiling stm32c0xx_hal_exti.c...
-compiling stm32c0xx_hal_i2c_ex.c...
-compiling uart_trace.c...
-compiling system_stm32c0xx.c...
 compiling stm32c0xx_hal_adc.c...
+compiling stm32c0xx_hal_i2c_ex.c...
+compiling stm32c0xx_hal_exti.c...
+compiling system_stm32c0xx.c...
+compiling uart_trace.c...
 compiling stm32c0xx_hal_uart_ex.c...
+compiling vl53l0x_platform_log.c...
+compiling vl53l0x_api_ranging.c...
+compiling vl53l0x_api_strings.c...
+compiling vl53l0x_platform.c...
+compiling vl53l0x_api_calibration.c...
 compiling stm32c0xx_hal_uart.c...
+compiling vl53l0x_api.c...
+../Drivers/VL503x/vl53l0x_api_core.c(1875): warning: taking the absolute value of unsigned type 'unsigned int' has no effect [-Wabsolute-value]
+                xTalkCorrection  = abs(diff1_mcps/diff2_mcps);
+                                   ^
+../Drivers/VL503x/vl53l0x_api_core.c(1875): note: remove the call to 'abs' since unsigned values cannot be negative
+                xTalkCorrection  = abs(diff1_mcps/diff2_mcps);
+                                   ^~~
+1 warning generated.
+compiling vl53l0x_api_core.c...
 compiling stm32c0xx_hal_i2c.c...
 linking...
-Program Size: Code=19124 RO-data=912 RW-data=12 ZI-data=2572  
+Program Size: Code=19224 RO-data=912 RW-data=12 ZI-data=2572  
 FromELF: creating hex file...
-"testPin-C011F6\testPin-C011F6.axf" - 0 Error(s), 0 Warning(s).
+"testPin-C011F6\testPin-C011F6.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -78,7 +92,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
