--- a/MDK-ARM/testPin-C011F6/testPin-C011F6.build_log.htm
+++ b/MDK-ARM/testPin-C011F6/testPin-C011F6.build_log.htm
@@ -22,36 +22,74 @@ Dialog DLL:      TARMCM1.DLL V1.14.6.0
  
 <h2>Project:</h2>
 C:\Users\diaferia\STM32CubeIDE\workspace_1.13.2\testPin-C011F6\MDK-ARM\testPin-C011F6.uvprojx
-Project File Date:  07/11/2024
+Project File Date:  07/15/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'testPin-C011F6'
 assembling startup_stm32c011xx.s...
-compiling main.c...
-compiling stm32c0xx_hal_msp.c...
-compiling stm32c0xx_hal.c...
-compiling stm32c0xx_hal_adc_ex.c...
 compiling stm32c0xx_hal_dma_ex.c...
 compiling stm32c0xx_it.c...
+../Core/Src/main.c(43): warning: 'trace_vprintf' macro redefined [-Wmacro-redefined]
+#define trace_vprintf uart_vprintf
+        ^
+../Drivers/VL503x/vl53l0x_platform_log.h(111): note: previous definition is here
+    #define trace_vprintf(...) (void)0
+            ^
+../Core/Src/main.c(67): warning: multi-character character constant [-Wmultichar]
+                {.Id=STM32C011F6U_SENSOR_1, .DevLetter='s0', .I2cHandle=&hi2c1, .I2cDevAddr=0x52},
+                                                       ^
+../Core/Src/main.c(68): warning: multi-character character constant [-Wmultichar]
+                {.Id=STM32C011F6U_SENSOR_2, .DevLetter='s1', .I2cHandle=&hi2c1, .I2cDevAddr=0x52},
+                                                       ^
+../Core/Src/main.c(69): warning: multi-character character constant [-Wmultichar]
+                {.Id=STM32C011F6U_SENSOR_3, .DevLetter='s2', .I2cHandle=&hi2c1, .I2cDevAddr=0x52},
+                                                       ^
+../Core/Src/main.c(69): warning: implicit conversion from 'int' to 'char' changes value from 29490 to 50 [-Wconstant-conversion]
+                {.Id=STM32C011F6U_SENSOR_3, .DevLetter='s2', .I2cHandle=&hi2c1, .I2cDevAddr=0x52},
+                ~                                      ^~~~
+../Core/Src/main.c(68): warning: implicit conversion from 'int' to 'char' changes value from 29489 to 49 [-Wconstant-conversion]
+                {.Id=STM32C011F6U_SENSOR_2, .DevLetter='s1', .I2cHandle=&hi2c1, .I2cDevAddr=0x52},
+                ~                                      ^~~~
+../Core/Src/main.c(67): warning: implicit conversion from 'int' to 'char' changes value from 29488 to 48 [-Wconstant-conversion]
+                {.Id=STM32C011F6U_SENSOR_1, .DevLetter='s0', .I2cHandle=&hi2c1, .I2cDevAddr=0x52},
+                ~                                      ^~~~
+../Core/Src/main.c(485): warning: multi-character character constant [-Wmultichar]
+        case 's1' :
+             ^
+../Core/Src/main.c(494): warning: multi-character character constant [-Wmultichar]
+        case 's2' :
+             ^
+../Core/Src/main.c(502): warning: multi-character character constant [-Wmultichar]
+        case 's3' :
+             ^
+../Core/Src/main.c(607): warning: non-void function does not return a value [-Wreturn-type]
+}
+^
+11 warnings generated.
+compiling main.c...
+compiling stm32c0xx_hal_adc_ex.c...
+compiling stm32c0xx_hal.c...
 compiling stm32c0xx_hal_rcc_ex.c...
-compiling stm32c0xx_hal_dma.c...
-compiling stm32c0xx_hal_rcc.c...
-compiling stm32c0xx_hal_flash.c...
+compiling stm32c0xx_hal_msp.c...
 compiling stm32c0xx_hal_flash_ex.c...
+compiling stm32c0xx_hal_rcc.c...
+compiling stm32c0xx_hal_dma.c...
+compiling stm32c0xx_hal_flash.c...
 compiling stm32c0xx_hal_pwr.c...
-compiling stm32c0xx_hal_gpio.c...
 compiling stm32c0xx_hal_pwr_ex.c...
-compiling stm32c0xx_hal_cortex.c...
+compiling stm32c0xx_hal_gpio.c...
 compiling stm32c0xx_hal_adc.c...
-compiling stm32c0xx_hal_i2c_ex.c...
+compiling stm32c0xx_hal_cortex.c...
 compiling stm32c0xx_hal_exti.c...
+compiling stm32c0xx_hal_i2c_ex.c...
 compiling system_stm32c0xx.c...
 compiling uart_trace.c...
-compiling stm32c0xx_hal_uart_ex.c...
-compiling vl53l0x_platform_log.c...
 compiling vl53l0x_api_ranging.c...
+compiling vl53l0x_platform_log.c...
+compiling stm32c0xx_hal_uart_ex.c...
 compiling vl53l0x_api_strings.c...
+compiling STM32C011F6Ux.c...
 compiling vl53l0x_platform.c...
 compiling vl53l0x_api_calibration.c...
 compiling stm32c0xx_hal_uart.c...
@@ -66,9 +104,9 @@ compiling vl53l0x_api.c...
 compiling vl53l0x_api_core.c...
 compiling stm32c0xx_hal_i2c.c...
 linking...
-Program Size: Code=19224 RO-data=912 RW-data=12 ZI-data=2572  
+Program Size: Code=19308 RO-data=964 RW-data=12 ZI-data=2572  
 FromELF: creating hex file...
-"testPin-C011F6\testPin-C011F6.axf" - 0 Error(s), 1 Warning(s).
+"testPin-C011F6\testPin-C011F6.axf" - 0 Error(s), 12 Warning(s).
 
 <h2>Software Packages used:</h2>
 
